--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-web": "~0.19.10",
     "react-dom": "18.2.0",
     "@expo/metro-runtime": "~3.2.1",
-    "@expo/vector-icons": "^14.0.2"
+    "@expo/vector-icons": "^14.0.2",
+    "expo-font": "~12.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
